# Spaden-ICPP24

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  spmv_float.cu  spmv_half.cu
include/: CMakeLists.txt
include/bmp/: bmp.h
include/bmp/matrices/: bitcsr.h  csr.h  matrices.h  vector_traits.h
include/bmp/operations/: convert.h  csr_helpers.h  operations.h  spmv_bmp.h
include/bmp/utils/: common.h  compute.h  functors.h  mmio.h  option.h  read.h  timer.h  utils.h
